# spitestack

./: .gitignore  Cargo.toml  THIRD_PARTY_NOTICES.md  package.json  spitedbplan
.github/workflows/: publish-spitestack-cli.yml  release.yml
examples/counter/.spitestack/: index.ts  router.ts  server.ts
examples/counter/.spitestack/handlers/: counter.handlers.ts
examples/counter/.spitestack/validators/: counter.validator.ts
examples/counter/domain/: counter.ts  index.ts
examples/todo-app/domain/: index.ts  task.ts  user.ts
lib/compiler/: tsconfig.json
lib/compiler/src/: compiler.ts  config.ts  index.ts
lib/compiler/src/codegen/: handlers.ts  index.ts  router.ts  server.ts  ts-types.ts  validators.ts
lib/compiler/src/diagnostic/: error.ts  index.ts  span.ts
lib/compiler/src/frontend/: index.ts
lib/compiler/src/frontend/typescript/: app-parser.ts  ast.ts  index.ts  parser.ts  to-ir.ts
lib/compiler/src/ir/: access.ts  aggregate.ts  domain.ts  index.ts  orchestrator.ts  projection.ts  types.ts
lib/compiler/src/runtime/: embedded.ts  spitedb.d.ts  spitedb.js
lib/compiler/src/schema/: diff.ts  index.ts  lock.ts
lib/compiler/src/validate/: index.ts  purity.ts  structure.ts
lib/compiler/test/: codegen.test.ts  ir.test.ts  parser.test.ts  schema.test.ts  validate.test.ts
lib/spitedb/: tsconfig.json
lib/spitedb/bench/: load-test.ts
lib/spitedb/scripts/: build-runtime.ts  build-types.ts
lib/spitedb/src/: index.ts  spitedb.ts
lib/spitedb/src/application/: index.ts
lib/spitedb/src/application/event-store/: event-store.ts  index.ts
lib/spitedb/src/application/projections/: checkpoint-manager.ts  index.ts  projection-coordinator.ts  projection-runner.ts
lib/spitedb/src/domain/: index.ts
lib/spitedb/src/domain/errors/: index.ts  invalid-position.error.ts  invalid-stream-id.error.ts  store-fatal.error.ts
lib/spitedb/src/domain/events/: index.ts  stored-event.ts
lib/spitedb/src/domain/value-objects/: global-position.ts  index.ts  revision.ts  stream-id.ts  tenant-id.ts
lib/spitedb/src/errors/: checkpoint-errors.ts  index.ts  projection-errors.ts  spitedb-error.ts
lib/spitedb/src/infrastructure/: index.ts  resource-limits.ts
lib/spitedb/src/infrastructure/filesystem/: bun-filesystem.ts  index.ts
lib/spitedb/src/infrastructure/projections/: default-registry.ts  index.ts
lib/spitedb/src/infrastructure/projections/stores/: aggregator-store.ts  denormalized-view-store.ts  disk-kv-store.ts  index-structures.ts  index.ts
lib/spitedb/src/infrastructure/serialization/: binary-event-batch-serializer.ts  fast-event-serializer.ts  index.ts  msgpack-serializer.ts  noop-compressor.ts  zstd-compressor.ts
lib/spitedb/src/infrastructure/storage/: index.ts
lib/spitedb/src/infrastructure/storage/batch/: batch-record.ts  index.ts
lib/spitedb/src/infrastructure/storage/segments/: index.ts  segment-header.ts  segment-index-file.ts  segment-index.ts  segment-manager.ts  segment-reader.ts  segment-writer.ts
lib/spitedb/src/infrastructure/time/: bun-clock.ts  index.ts
lib/spitedb/src/ports/: index.ts
lib/spitedb/src/ports/projections/: index.ts  projection-registry.ts  projection-store.ts  projection.ts
lib/spitedb/src/ports/serialization/: compressor.ts  index.ts
lib/spitedb/src/ports/storage/: filesystem.ts  index.ts
lib/spitedb/src/ports/time/: clock.ts  index.ts
lib/spitedb/src/testing/: simulated-clock.ts  simulated-filesystem.ts
lib/spitedb/test/dst/: compression-failures.test.ts  concurrent-operations.test.ts  crash-scenarios.test.ts  edge-cases.test.ts  fuzz.test.ts  io-failure-scenarios.test.ts
lib/spitedb/test/integration/event-store/: concurrent-appends-real-fs.test.ts  concurrent-appends.test.ts  crash-recovery.test.ts  crash-test-worker.ts  file-locking.test.ts  real-crash.test.ts  real-fs-fuzz.test.ts
lib/spitedb/test/integration/projections/: projection-durability.test.ts  real-fs-projection-fuzz.test.ts
lib/spitedb/test/property/: event-store.property.test.ts
lib/spitedb/test/setup/: dst-scenarios.ts  fault-scheduler.ts  index.ts  mock-projection.ts  seeded-random.ts  test-fixtures.ts  test-helpers.ts
lib/spitedb/test/unit/infrastructure/: disk-kv-store-corruption.test.ts  flush-idempotency.test.ts  locale-ordering.test.ts  short-write.test.ts
lib/spitedb/test/unit/testing/: simulated-clock.test.ts  simulated-filesystem.test.ts
lib/stage/: svelte.config.js  vite.config.ts
lib/stage/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
lib/stage/.svelte-kit/types/: route_meta_data.json
lib/stage/src/: app.css  app.html
lib/stage/src/lib/api/: client.ts  index.ts  websocket.ts
lib/stage/src/lib/stores/: auth.ts  focus.ts  index.ts  telemetry.ts  ui.ts  viewport.ts
lib/stage/src/lib/theme/: colors.ts  variables.css
lib/stage/src/lib/types/: telemetry.ts
lib/stage/src/routes/: +layout.svelte  +page.svelte
lib/stage/src/routes/change-password/: +page.svelte
lib/stage/src/routes/login/: +page.svelte
scripts/: embed-runtime.ts
spitedb-napi/: Cargo.toml  index.d.ts  package.json
spitedb-napi/bench/: append-load-test.ts  find-sustainable-throughput.ts
spitedb-napi/js/: define.d.ts.map  define.js  index.d.ts  index.js  runner.d.ts  runner.d.ts.map  runner.js  runner.ts  worker.d.ts  worker.d.ts.map
spitedb-napi/src/: lib.rs
spitedb-napi/src/projection/: consumer.rs  error.rs  instance.rs  mod.rs  registry.rs
src/: actor.rs  api.rs  codec.rs  crypto.rs  error.rs  lib.rs  main.rs  reader.rs  schema.rs  storage.rs  subscription.rs  tombstones.rs  types.rs  writer.rs
src/cli/: args.ts  index.ts
src/cli/commands/: build.ts  check.ts  compile.ts  dev.ts  init.ts  watch.ts
src/cli/commands/schema/: diff.ts  index.ts  reset.ts  status.ts  sync.ts
src/cli/utils/: logger.ts
test/e2e/: compile.test.ts  runtime.test.ts
tests/: common.rs  compaction_test.rs  edge_cases_test.rs  hash_collision_test.rs  idempotency_scope_test.rs  invariants_append_read_test.rs  multi_tenant_isolation_test.rs  restart_recovery_test.rs  savepoint_isolation_test.rs  transaction_atomicity_test.rs
(+52 files in other folders)
