[package]
name = "spitedb"
version = "0.1.0"
edition = "2024"
description = "A production-grade event store runtime using SQLite"

# We expose both a library (for embedding) and a binary (for standalone use)
[lib]
name = "spitedb"
path = "src/lib.rs"

[[bin]]
name = "spitedb"
path = "src/main.rs"

[dependencies]
# =============================================================================
# SQLite
# =============================================================================
# rusqlite: Safe Rust bindings for SQLite
# - "bundled" feature compiles SQLite from source, ensuring consistent behavior
#   across platforms and avoiding system SQLite version mismatches
# - This is the recommended approach for production applications
rusqlite = { version = "0.32", features = ["bundled"] }

# =============================================================================
# Error Handling
# =============================================================================
# thiserror: Derive macro for implementing std::error::Error
# - Reduces boilerplate for custom error types
# - Generates Display implementations from doc comments
# - Rust pattern: prefer thiserror for library errors, anyhow for applications
thiserror = "2"

# =============================================================================
# Hashing
# =============================================================================
# xxhash-rust: XXH3 implementation - fastest stable hash for modern CPUs
# - Uses SIMD (SSE2/AVX2/NEON) when available
# - Stable algorithm with formal specification (won't change between versions)
# - xxh3 feature enables the 64-bit XXH3 variant
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# =============================================================================
# Caching
# =============================================================================
# lru: O(1) LRU cache implementation
# - Used for command idempotency cache with time-based eviction
# - Prevents unbounded memory growth from stored command results
lru = "0.12"

# =============================================================================
# Async Runtime
# =============================================================================
# tokio: The most widely-used async runtime for Rust
# Features enabled:
# - rt-multi-thread: Multi-threaded runtime with work-stealing scheduler
# - sync: Async-aware synchronization primitives (mpsc, oneshot, etc.)
# - macros: #[tokio::main] and #[tokio::test] macros
# - time: Timers, delays, and timeouts (needed for group commit in Stage 7)
#
# Why Tokio?
# - Industry standard, battle-tested in production
# - Excellent documentation and ecosystem
# - spawn_blocking() for running SQLite operations without blocking the runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }

# =============================================================================
# Async Streams
# =============================================================================
# futures: Foundation for async programming in Rust
# - Provides the Stream trait for async iterators
# - Used by subscriptions to implement the Stream interface
# - Core abstraction for async sequences of values
futures = "0.3"

[dev-dependencies]
# tempfile: Create temporary files/directories for testing
# - Automatically cleaned up when TempDir goes out of scope
# - Essential for testing database operations without polluting the filesystem
tempfile = "3"
